# toy-lang

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
Source/: CMakeLists.txt
Source/Builder/: Builder.cpp  CMakeLists.txt
Source/Core/: CMakeLists.txt  Core.hpp  Exception.hpp  Exceptions.hpp  FileReader.hpp  Platform.hpp  TypeDef.hpp  Types.hpp  Utility.hpp  Visitor.hpp
Source/Driver/: CMakeLists.txt  CommandParser.cpp  CommandParser.hpp  ConfigParser.hpp  Driver.cpp
Source/FrontEnd/: CMakeLists.txt  CombParser.cpp  CombParser.hpp  CombinatoryParser.hpp  FrontEnd.hpp  Lexer.cpp  Lexer.hpp  Parser.cpp  Parser.hpp  ParsingDriver.hpp  PrettyPrinter.cpp  PrettyPrinter.hpp  Token.cpp  Token.hpp
Source/Lexer/: CMakeLists.txt  Lexer.cpp  Lexer.hpp  Token.cpp  Token.hpp
Source/Parser/: AST.cpp  AST.hpp  CMakeLists.txt  Parser.hpp  PrettyPrinter.cpp  PrettyPrinter.hpp
Source/Syntax/: AST.hpp  Base.cpp  Base.hpp  CMakeLists.txt  Concrete.cpp  Concrete.hpp  Declarations.hpp  Definitions.cpp  Definitions.hpp  Expressions.cpp  Expressions.hpp  Forward.hpp  Statements.cpp  Statements.hpp  Syntax.hpp  SyntaxTreeVisitor.hpp
Test/Unit/: CMakeLists.txt  Test.cpp
Test/Unit/FrontEnd/: CMakeLists.txt  CombParser.test.cpp  Lexer.test.cpp  Parser.test.cpp  PrettyPrinter.test.cpp  Syntax.test.cpp  TestLexer.cpp  TestParser.cpp  TestPrettyPrinter.cpp
Test/Unit/Resources/: Simple.toy  test1.toy
source/: CMakeLists.txt
source/FrontEnd/: CombinatoryParser.hpp  Lexer.hpp  Parser.hpp  ParsingDriver.hpp  PrettyPrinter.hpp  Token.hpp
source/backend/: CMakeLists.txt
source/core/: CMakeLists.txt  Concept.hpp  Logger.hpp  Utility.hpp  concept.hpp  config.hpp  config.in.hpp  constant.hpp  core.hpp  exception.hpp  file.hpp  graph.hpp  log.hpp  mixin.hpp  platform.hpp  range.hpp  singleton.hpp  std.pch.hpp  type.hpp  utility.cpp  utility.hpp  visitor.hpp
source/driver/: CMakeLists.txt  ConfigParser.cpp  args.cpp  args.hpp  driver.cpp  driver.hpp  tlc.cpp
source/lex/: CMakeLists.txt  context.cpp  context.hpp  lex.cpp  lex.hpp  lex_comment.cpp  lex_identifier.cpp  lex_numeric.cpp  lex_string.cpp  lex_symbol.cpp  lexer.cpp  lexer.hpp  stream.cpp  stream.hpp  text_stream.cpp  token.cpp  token.hpp  util.hpp
source/parse/: CMakeLists.txt  ast_printer.cpp  ast_printer.hpp  combinator.hpp  combinators.cpp  combinators.hpp  context.cpp  context.hpp  error_collector.cpp  error_collector.hpp  handle_decl.cpp  handle_enum_def.cpp  handle_expr.cpp  handle_flag_def.cpp  handle_function_def.cpp  handle_global_decl.cpp  handle_postfix_expr.cpp  handle_primary_expr.cpp  handle_stmt.cpp  handle_stmt_level_decl.cpp  handle_trait_def.cpp  handle_type.cpp  handle_type_def.cpp  handle_value_expr.cpp  location_tracker.cpp  location_tracker.hpp  panic.cpp  panic.hpp  parse.cpp  parse.hpp  parse_error.cpp  parse_error.hpp  parse_impl.cpp  parse_module.cpp  parse_unit.fwd.cpp  parse_value_expr.cpp  parser.cpp  parser.hpp  pretty_print.cpp  pretty_print.hpp  (+6 more)
source/static/: CMakeLists.txt  error_collector.cpp  error_collector.hpp  static.hpp
source/static/post_parsing/: tuple_normalizer.cpp  tuple_normalizer.hpp
source/syntax/: Base.hpp  CMakeLists.txt  Definitions.cpp  Definitions.hpp  Expressions.cpp  Expressions.hpp  Forward.hpp  Statements.hpp  Syntax.hpp  SyntaxTreeVisitor.hpp  ast_base.cpp  ast_base.hpp  ast_printer.hpp  ast_visitor.hpp  base.cpp  base.hpp  definition_nodes.cpp  definition_nodes.hpp  expr_nodes.cpp  expr_nodes.hpp  forward.hpp  nodes.cpp  nodes.hpp  pretty_printer.hpp  stmt_nodes.cpp  stmt_nodes.hpp  syntax.cpp  syntax.hpp  util.cpp  util.hpp  visitor.hpp
source/token/: CMakeLists.txt  classify.cpp  classify.hpp  lexeme.cpp  lexeme.hpp  token.cpp  token.hpp  token_impl.cpp  token_impl.hpp  tokenized_buffer.cpp  tokenized_buffer.hpp
source/utility/: CMakeLists.txt
source/utility/dump/: comb_parser.cpp  comb_parser.hpp  comb_parser.test.cpp  di.cpp  enum.cpp  lex.cpp  visitor.cpp
test/: CMakeLists.txt
test/unit/: CMakeLists.txt
test/unit/FrontEnd/: CMakeLists.txt
test/unit/frontend/: CMakeLists.txt  lex-stream.test.cpp  lex.test.cpp
test/unit/lex/: CMakeLists.txt  lex.test.cpp  stream.test.cpp  text_stream.test.cpp
test/unit/parse/: CMakeLists.txt  PrettyPrinter.test.cpp  ast_printer.test.cpp  combinator.test.cpp  combinators.test.cpp  context.test.cpp  decl_generic.test.cpp  decl_id.test.cpp  decl_tuple.test.cpp  expr_array.test.cpp  expr_binary.test.cpp  expr_fnapp.test.cpp  expr_id.test.cpp  expr_literal.test.cpp  expr_prefix.test.cpp  expr_record.test.cpp  expr_string.test.cpp  expr_subscript.test.cpp  expr_ternary.test.cpp  expr_try.test.cpp  expr_tuple.test.cpp  handle_decl.test.cpp  handle_expr.test.cpp  handle_function_def.test.cpp  handle_global_decl.test.cpp  handle_stmt.test.cpp  handle_type.test.cpp  panic.test.cpp  parse.test.cpp  parse.test.hpp  parse_expr.test.cpp  pretty_print.test.cpp  pretty_printer.test.cpp  stream.test.cpp  (+7 more)
toolchain/core/: CMakeLists.txt  concept.cpp  concept.hpp  config.cpp  config.hpp  config.in.cpp  config.in.hpp  core.cppm  core.fwd.cpp  core.fwd.hpp  core.hpp  core.pch.hpp  exception.cpp  exception.hpp  mixin.cpp  mixin.hpp  platform.cpp  range.cpp  range.hpp  singleton.cpp  singleton.hpp  std.pch.hpp  type.hpp  utility.cpp  utility.hpp  visitor.cpp  visitor.hpp
toolchain/driver/: CMakeLists.txt  command.cpp  command.hpp  driver.cppm  driver_impl.cpp  entry.cpp  project.cpp  project.hpp  tlc.cpp
toolchain/parse/: CMakeLists.txt  ast_printer.hpp  context.cpp  context.hpp  handle_decl.cpp  handle_enum_def.cpp  handle_expr.cpp  handle_flag_def.cpp  handle_function_def.cpp  handle_global_decl.cpp  handle_stmt.cpp  handle_trait_def.cpp  handle_type.cpp  handle_type_def.cpp  location_tracker.cpp  location_tracker.hpp  parse.cpp  parse.cppm  parse.hpp  parse_error.cpp  parse_error.hpp  parse_impl.cpp  parse_unit.fwd.hpp  pretty_printer.cpp  pretty_printer.hpp  token_stream.cpp  token_stream.hpp
toolchain/static/: CMakeLists.txt  error_collector.cpp  static.cpp  static.cppm  static.hpp  static_error.cpp  static_error.hpp
(+102 files in other folders)
